--- a/wp-content/themes/roots-master/assets/less/_variables.less
+++ b/wp-content/themes/roots-master/assets/less/_variables.less
@@ -10,7 +10,7 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #27ae60;
+@brand-primary:         #dc2e26;
 
 
 
@@ -18,3 +18,38 @@
 // -------------------------
 
 @icon-font-path:        "../vendor/bootstrap/fonts/";
+
+@font-family-sans-serif: 'Roboto', sans-serif;
+
+@navbar-default-link-hover-bg: transparent;
+@navbar-default-link-active-bg: transparent;
+@navbar-default-link-active-color: @brand-primary;
+@navbar-default-link-hover-color: @brand-primary;
+
+
+  // .navbar-nav {
+  //   > li > a {
+  //     color: @navbar-default-link-color;
+
+  //     &:hover,
+  //     &:focus {
+  //       color: @navbar-default-link-hover-color;
+  //       background-color: @navbar-default-link-hover-bg;
+  //     }
+  //   }
+  //   > .active > a {
+  //     &,
+  //     &:hover,
+  //     &:focus {
+  //       color: @navbar-default-link-active-color;
+  //       background-color: @navbar-default-link-active-bg;
+  //     }
+  //   }
+  //   > .disabled > a {
+  //     &,
+  //     &:hover,
+  //     &:focus {
+  //       color: @navbar-default-link-disabled-color;
+  //       background-color: @navbar-default-link-disabled-bg;
+  //     }
+  //   }
