--- a/wp-content/themes/roots-master/assets/less/main.less
+++ b/wp-content/themes/roots-master/assets/less/main.less
@@ -1,3 +1,6 @@
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,400italic);
+
 // Bootstrap
 @import "_bootstrap";
 
