--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -5,15 +5,6 @@ body{
 @media (min-width: @screen-sm-min)  {}
 @media (min-width: @screen-md-min)  {
 
-	.logo {
-			position: fixed;
-			width: 600px;
-			height: 200px;
-			margin: -50px 0 0 -300px;
-			top: 50%;
-			left: 50%;
-	}
-
 	.navbar{
 		min-height: 0;
 		text-transform: uppercase;
@@ -32,6 +23,10 @@ body{
 		min-width: 180px;
 	}
 
+	.dropdown-toggle b.caret{
+		display: none;
+	}
+
 	.navbar-toggle{
 		position: absolute;
 		right: 0;
@@ -40,6 +35,46 @@ body{
 	.navbar-brand{
 		position: absolute;
 		left: 0;
+		top: -100px;
+		opacity: 0;
+	}
+
+	.animate .navbar-brand{
+		opacity: 1;
+		top: 0px;
+		.transition(opacity 2.0s ease);
+		.transition(top 1.5s ease);
+	}
+
+	.experience{
+		color: #fff;
+		position: fixed;
+		height: 30px;
+		width: 220px;
+		margin: -50px 0 0 -110px;
+		bottom: -50px;
+		left: 50%;
+		border-top: 1px solid #fff;
+	}
+
+	.animate .experience{
+		bottom: 5%;
+		.transition(bottom 1.5s ease);
+	}
+
+	.logo {
+		opacity: 0;
+		position: fixed;
+		width: 600px;
+		height: 200px;
+		margin: -50px 0 0 -300px;
+		top: 50%;
+		left: 50%;
+	}
+
+	.animate .logo{
+		opacity: 1;
+		.transition(opacity 1.5s ease);
 	}
 
 	.navbar .container{
@@ -48,6 +83,12 @@ body{
 	.navbar-default{
 		background-color: #333;
 		border-bottom: none;
+		.navbar-toggle:hover{
+			color: @brand-primary;
+		}
+		.navbar-toggle:hover, .navbar-toggle:focus{
+			background-color: transparent;
+		}
 	}
 	.navbar-header{
 		height: 0;
@@ -57,9 +98,11 @@ body{
 	.navbar-collapse{
 		position: relative;
 		left: -100px;
-		//margin-top: -52px;
+		margin-top: -1px;
 		border-top: none;
 	}
+
+
 	.nav > li{
 		float: left;
 	}
@@ -85,7 +128,7 @@ body{
 		width: 120px; 
 		margin-right: -120px;
 	}
-
+	
 	.navbar-nav .dropdown-menu > li > a, .navbar-nav .open .dropdown-menu > li > a{
 		padding: 5px 15px 5px 13px !important;
 		color: #777777;
