Quick fix solution for full min col height

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -4,9 +4,11 @@ body{
 
 @media (min-width: @screen-sm-min)  {}
 @media (min-width: @screen-md-min)  {
-
-	.main .col-md-4{
-		background-color: #fff;
+	
+	.single-col{
+		background: #fff;
+		background: rgba(255, 255, 255, 0.85);
+		min-height: 700px;
 	}
 
 	.navbar{
