--- a/wp-content/themes/roots-master/assets/less/_variables.less
+++ b/wp-content/themes/roots-master/assets/less/_variables.less
@@ -20,36 +20,11 @@
 @icon-font-path:        "../vendor/bootstrap/fonts/";
 
 @font-family-sans-serif: 'Roboto', sans-serif;
+@headings-font-family: 'Montserrat', sans-serif;
 
 @navbar-default-link-hover-bg: transparent;
 @navbar-default-link-active-bg: transparent;
 @navbar-default-link-active-color: @brand-primary;
 @navbar-default-link-hover-color: @brand-primary;
 
-
-  // .navbar-nav {
-  //   > li > a {
-  //     color: @navbar-default-link-color;
-
-  //     &:hover,
-  //     &:focus {
-  //       color: @navbar-default-link-hover-color;
-  //       background-color: @navbar-default-link-hover-bg;
-  //     }
-  //   }
-  //   > .active > a {
-  //     &,
-  //     &:hover,
-  //     &:focus {
-  //       color: @navbar-default-link-active-color;
-  //       background-color: @navbar-default-link-active-bg;
-  //     }
-  //   }
-  //   > .disabled > a {
-  //     &,
-  //     &:hover,
-  //     &:focus {
-  //       color: @navbar-default-link-disabled-color;
-  //       background-color: @navbar-default-link-disabled-bg;
-  //     }
-  //   }
+@font-size-h4: ceil((@font-size-base * 1.2)); // ~18px
