--- a/wp-content/themes/roots-master/assets/less/main.less
+++ b/wp-content/themes/roots-master/assets/less/main.less
@@ -1,5 +1,6 @@
 @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700,400italic);
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 // Bootstrap
 @import "_bootstrap";
