--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -17,6 +17,10 @@ ul.siblings{
 @media (min-width: @screen-sm-min)  {}
 @media (min-width: @screen-md-min)  {
 	
+	.extra-pad{
+		padding: (@grid-gutter-width / 2);
+	}
+
 	.breadcrumbs{
 		font-family: @headings-font-family;
 		text-transform: uppercase;
@@ -27,18 +31,56 @@ ul.siblings{
 		padding-right: 0;
 		padding-left: 0;
 	}
-	.team-imgs div{
+	.team-imgs .headshot{
+		position: relative;
+		background: @brand-primary;
 		padding-left: 0;
 		padding-right: 0;
+		img{
+			.opacity(1);
+			.transition(opacity 0.4s ease);
+		}
 	}
-	
+
+	.team-imgs .name{
+		color: #fff;
+		z-index: 10;
+		position: absolute;
+		bottom: 5px;
+		left: 10px;
+		.opacity(0);
+		.transition(opacity 0.4s ease);
+		h4{
+			margin:0;
+		}
+	}
+
+	.team-imgs a:hover{
+		.name{
+			.opacity(1);
+		}
+		img{
+			.opacity(0.5);
+		}
+	}
+
+	.team-back{
+		margin:20px 0;
+		font-size: @font-size-h4;
+	}
+
 	.single-col:after{
-		
+		//.make-md-column(4);	
+		width: 318px;
+	}
+	.team-col:after{
+		//.make-sm-column(6);
+	}
+	.fixed-col:after{
 		background: #fff;
 		background: rgba(255, 255, 255, 0.85);
 		position: fixed;
 		top: 0;
-		width: 313px;
 		content: "";
 		display: block;
 		height: 5000px;
@@ -72,7 +114,7 @@ ul.siblings{
 	
 	.home .navbar-brand{
 		top: -100px;
-		opacity: 0;
+		.opacity(0);
 	}
 
 	.navbar-brand{
@@ -81,7 +123,7 @@ ul.siblings{
 	}
 
 	.animate .navbar-brand{
-		opacity: 1;
+		.opacity(1);
 		top: 0px;
 		.transition(opacity 2.0s ease);
 		.transition(top 1.5s ease);
@@ -114,7 +156,7 @@ ul.siblings{
 	}
 
 	.animate .logo{
-		opacity: 1;
+		.opacity(1);
 		.transition(opacity 1.5s ease);
 	}
 
@@ -180,6 +222,10 @@ ul.siblings{
 @media (min-width: @screen-lg-min)  {
 	.single-col:after{
 		width: 380px;
+	}
+
+	.team-col:after{
+		width: 570px;
 	}
     
 }
