--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -6,6 +6,10 @@ body{
 	max-width: 220px;
 }
 
+ul{
+	padding-left: 20px;
+}
+
 ul.siblings{
 	margin-top: 80px;
 	list-style-type: none;
@@ -14,7 +18,11 @@ ul.siblings{
 }
 
 
-@media (min-width: @screen-sm-min)  {}
+@media (min-width: @screen-sm-min)  {
+	.flexbox .navbar-fixed-top{
+		top: 32px;
+	}
+}
 @media (min-width: @screen-md-min)  {
 	
 	.extra-pad{
