added template to display portfolio categories

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -19,12 +19,24 @@ ul.siblings{
 
 
 @media (min-width: @screen-sm-min)  {
-	.flexbox .navbar-fixed-top{
+	.logged-in .navbar-fixed-top{
 		top: 32px;
 	}
+
+	.portfolio .navbar-toggle{
+		color: #484848;
+	}
+
+
 }
 @media (min-width: @screen-md-min)  {
 	
+	.portfolio .page-header{
+		margin-top: 7px;
+		text-transform: uppercase;
+		border-bottom: none;
+	}
+
 	.extra-pad{
 		padding: (@grid-gutter-width / 2);
 	}
