--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -31,10 +31,76 @@ ul.siblings{
 }
 @media (min-width: @screen-md-min)  {
 	
+	.portfolio-fixed{
+		position:fixed; 
+		width:100%;
+		left: 0;
+		background: #fff;
+		z-index: 1;
+		border-bottom: 1px solid #d6d5d5;
+	}
+	
+	.portfolio .category-thumbs{
+		margin-top: 150px;
+	}
+
 	.portfolio .page-header{
-		margin-top: 7px;
+		margin-top: 20px;
 		text-transform: uppercase;
 		border-bottom: none;
+	}
+
+	.portfolio .breadcrumbs{
+		margin-bottom: 20px;
+	}
+
+	.portfolio .portfolio-dropdown{
+		width: 100%;
+		button{
+			width: 100%;
+			text-align: left;
+			border-radius: 0;
+			border: none;
+			background: #e4e4e4;
+			padding: 10px 20px;
+			.caret{
+				margin-top: 8px;
+			}
+		}
+		.dropdown-menu{
+			width: 100%;
+			margin-top: -1px;
+			padding: 0;
+			border-radius: 0;
+			border: none;
+			background: #686767;
+			font-size: 14px;
+			a{
+				color: #fff;
+				text-transform: uppercase;
+				padding: 5px 20px;
+			}
+			a:hover{
+				background: #e4e4e4;
+				color:#000;
+			}
+			
+		}
+	}
+
+	.portfolio .col-md-3{ 
+		h4{
+			position: absolute;
+			bottom: 5px;
+			left: @grid-gutter-width;
+			color: #fff;
+		}
+		img{
+			//.opacity(0.5);
+		}
+		.bg{
+			background: @brand-primary;
+		}
 	}
 
 	.extra-pad{
