set up style for category landing and category single page

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -23,7 +23,7 @@ ul.siblings{
 		top: 32px;
 	}
 
-	.portfolio .navbar-toggle{
+	.portfolio .navbar-toggle, .category .navbar-toggle{
 		color: #484848;
 	}
 }
@@ -38,21 +38,21 @@ ul.siblings{
 		border-bottom: 1px solid #d6d5d5;
 	}
 	
-	.portfolio .category-thumbs{
+	.portfolio-categories .category-thumbs{
 		margin-top: 150px;
 	}
 
-	.portfolio .page-header{
+	.portfolio-categories .page-header{
 		margin-top: 20px;
 		text-transform: uppercase;
 		border-bottom: none;
 	}
 
-	.portfolio .breadcrumbs{
+	.portfolio-categories .breadcrumbs{
 		margin-bottom: 20px;
 	}
 
-	.portfolio .portfolio-dropdown{
+	.portfolio-categories .portfolio-dropdown{
 		width: 100%;
 		button{
 			width: 100%;
@@ -86,7 +86,7 @@ ul.siblings{
 		}
 	}
 
-	.portfolio .col-md-3{ 
+	.portfolio-categories .col-md-3{ 
 		h4{
 			position: absolute;
 			bottom: 5px;
