--- a/wp-content/themes/roots-master/assets/less/_variables.less
+++ b/wp-content/themes/roots-master/assets/less/_variables.less
@@ -11,8 +11,8 @@
 // -------------------------
 
 @brand-primary:         #dc2e26;
-
-
+@gray-dark: #646262;
+@gray: #e4e4e4;
 
 // Glyphicons path
 // -------------------------
