got boxer installed

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -213,7 +213,10 @@ a:hover{
 	.single-portfolio .breadcrumbs{
 		margin-bottom: 0px;
 	}
-
+	
+	.single-portfolio .links{
+		margin-top: 20px;
+	}
 	.single-portfolio h3 small{
 		cursor: pointer;
 		font-size: 12px;
@@ -235,6 +238,7 @@ a:hover{
 		a:hover{
 			color: @brand-primary;
 		}
+
 	}
 	.single-portfolio h5{
 		color: #000;
@@ -405,7 +409,6 @@ a:hover{
 		padding: 5px 15px 5px 13px !important;
 		color: #777777;
 	}
-
 
 }
 @media (min-width: @screen-lg-min)  {
