--- a/wp-content/themes/roots-master/assets/less/main.less
+++ b/wp-content/themes/roots-master/assets/less/main.less
@@ -10,7 +10,8 @@
 
 // Roots
 @import "_global";                   // Base styling & custom mixins
-@import "_background-slide";                   // Base styling & custom mixins
+@import "_background-slide";         // Base styling & custom mixins
+@import "_boxer";         // Base styling & custom mixins
 @import "components/_buttons";       // Button tweaks
 @import "components/_forms";         // Form tweaks
 @import "components/_media";         // WordPress media
