--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -357,6 +357,7 @@ a:hover{
 		position: relative;
 	}
 	.navbar-default{
+		z-index: 1;
 		background-color: #333;
 		border-bottom: none;
 		.navbar-toggle:hover{
