--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -22,6 +22,9 @@ a:hover{
 	text-decoration: none;
 }
 
+a:focus{
+	outline: none;
+}
 
 
 
@@ -36,6 +39,10 @@ a:hover{
 }
 @media (min-width: @screen-md-min)  {
 	
+	header .container{
+		width: 100%;
+	}
+
 	.shadow{
 		position: fixed;
 		top: 0;
@@ -330,12 +337,12 @@ a:hover{
 		width: 220px;
 		margin: -50px 0 0 0px;
 		bottom: -50px;
-		left: 50px;
+		left: 15px;
 		border-top: 1px solid #fff;
 	}
 
 	.finish-animate .experience{
-		bottom: 5%;
+		bottom: 15px;
 		.transition(bottom 2.8s ease);
 	}
 
@@ -415,7 +422,7 @@ a:hover{
 	
 	.navbar-nav .dropdown-menu > li > a, .navbar-nav .open .dropdown-menu > li > a{
 		padding: 0px 15px 0px 13px !important;
-		color: #777777;
+		color: #fff !important;
 	}
 
 }
