Organized nabber into separate style sheet.  Hide entire navbar in tablet/mobile in favor of slide out.

--- a/wp-content/themes/roots-master/assets/less/main.less
+++ b/wp-content/themes/roots-master/assets/less/main.less
@@ -10,6 +10,7 @@
 
 // Roots
 @import "_global";                   // Base styling & custom mixins
+@import "_navbar";                   // Base styling & custom mixins
 @import "_background-slide";         // Base styling & custom mixins
 @import "_boxer";         // Base styling & custom mixins
 @import "components/_buttons";       // Button tweaks
