--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -5,6 +5,28 @@
 	max-width: 220px;
 }
 
+html{height: 100%;}
+body{
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+}
+.side-nav
+{
+	z-index: 10;
+	position: absolute;
+	width: 50%;
+	left: 100%;
+	height: 100%;
+	background: @gray-darker;
+	.transition(left 1.0s ease);
+}
+
+.finish-animate .side-nav{
+	left: 50%;
+}
+
 
 @media (min-width: @screen-sm-min)  {}
 
