--- a/wp-content/themes/roots-master/assets/less/_variables.less
+++ b/wp-content/themes/roots-master/assets/less/_variables.less
@@ -14,6 +14,13 @@
 @gray-dark: #646262;
 @gray: #e4e4e4;
 
+@dropdown-link-color: #fff;
+@dropdown-link-hover-color: @brand-primary;
+@dropdown-link-hover-bg: transparent;
+@dropdown-link-active-bg: transparent;
+@dropdown-link-active-color: @brand-primary;
+
+
 // Glyphicons path
 // -------------------------
 
