--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -63,6 +63,7 @@ a:focus{
 	img{
 		.opacity(1);
 		.transition(opacity 0.4s ease);
+		width: 100%;
 	}
 }
 
@@ -107,6 +108,8 @@ a:focus{
 	}
 	.wrap{
 		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
 	}
 
 }
@@ -114,6 +117,8 @@ a:focus{
 	
 	.wrap{
 		width: @container-md;
+		padding-left: (@grid-gutter-width / 2);
+		padding-right: (@grid-gutter-width / 2);
 	}
 
 	header .container{
