Nav style for portfolio and category pages

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -207,11 +207,11 @@ a:focus{
 		padding-right: 0;
 	}
 
-	.category .wrap{
-		width: @container-sm;
-		padding-left: (@grid-gutter-width / 2);
-		padding-right: (@grid-gutter-width / 2);
-	}
+	// .category .wrap{
+	// 	width: @container-sm;
+	// 	padding-left: (@grid-gutter-width / 2);
+	// 	padding-right: (@grid-gutter-width / 2);
+	// }
 
 }
 @media (min-width: @screen-md-min)  {
