--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -119,11 +119,15 @@ html, body{
 
 
 @media (min-width: @screen-sm-min)  {
-	.portfolio .top-nav{
+	.portfolio .top-nav,
+	.category .top-nav{
 		display: block;
 	}
 
-	.portfolio .side-nav, .portfolio .open-sidenav{
+	.portfolio .side-nav, 
+	.portfolio .open-sidenav,
+	.category .side-nav, 
+	.category .open-sidenav{
 		display: none;
 	}
 
