Increased column size on single col pages

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -317,19 +317,18 @@ a:focus{
 		background: url(../img/shadow.png);
 	}
 
-
+	.team-imgs .headshot{
+		float: right;
+		width: 31.3333%;
+	}
 
 	.single-col:after{
-		width: 313px;
+		width: 392px;
 	}
 
 	.page.fixed-col{
 		padding-bottom: 50px;
 	}
-
-	
-	
-	
 
 	.experience{
 		display: block;
@@ -364,7 +363,7 @@ a:focus{
 	}
 
 	.single-col:after{
-		width: 380px;
+		width: 475px;
 	}
 
 	.team-col:after{
