--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -125,6 +125,12 @@ a:focus{
 	font-size: @font-size-h4;
 }
 
+.career h5{
+	margin-bottom: 0;
+	font-weight: bold;
+	color: #000;
+}
+
 .portfolio-fixed{
 	top: 0;
 	position:fixed; 
