--- a/wp-content/themes/roots-master/assets/less/_variables.less
+++ b/wp-content/themes/roots-master/assets/less/_variables.less
@@ -21,6 +21,8 @@
 @dropdown-link-active-color: @brand-primary;
 
 
+@font-size-h5: ceil((@font-size-base * 1.08)); // ~18px
+
 // Glyphicons path
 // -------------------------
 
