Updated team styles

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -325,7 +325,10 @@ a:focus{
 
 	.team-imgs .headshot{
 		float: right;
-		width: 31.3333%;
+		width: 31.22%;
+		img{
+			width: 100%;
+		}
 	}
 
 	.single-col:after{
