--- a/wp-content/themes/roots-master/assets/less/_variables.less
+++ b/wp-content/themes/roots-master/assets/less/_variables.less
@@ -23,6 +23,13 @@
 
 @font-size-h5: ceil((@font-size-base * 1.08)); // ~18px
 
+@input-border-radius: 0;
+@input-bg: #cccaca;
+
+.btn{
+	border-radius: 0;
+}
+
 // Glyphicons path
 // -------------------------
 
