--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -90,6 +90,9 @@ a:focus{
 	padding-right: 0;
 	padding-left: 0;
 }
+.team-imgs{
+	clear: both;
+}
 .team-imgs .headshot{
 	position: relative;
 	background: @brand-primary;
@@ -139,7 +142,7 @@ a:focus{
 
 .portfolio-fixed{
 	top: 0;
-	position:fixed; 
+	position:relative; 
 	width:100%;
 	left: 0;
 	background: #fff;
@@ -148,7 +151,7 @@ a:focus{
 }
 
 .portfolio-categories .category-thumbs{
-	margin-top: 150px;
+	margin-top: 20px;
 }
 
 .page-header{
@@ -201,6 +204,8 @@ a:focus{
 }
 
 .portfolio-categories .col-md-3{ 
+	margin-bottom: (@grid-gutter-width/2);
+	max-width: 430px;	
 	h4{
 		position: absolute;
 		bottom: 5px;
@@ -224,15 +229,46 @@ a:focus{
 	}
 }
 
-
-
 .breadcrumbs{
 	font-family: @headings-font-family;
 	text-transform: uppercase;
-	margin-bottom: 80px;
+	margin-bottom: 30px;
 }
 
+
+
 @media (min-width: @screen-sm-min)  {
+
+	.portfolio .top-nav .navbar-toggle{
+		display: none;
+	}
+
+	.portfolio .top-nav .navbar-toggle{
+		display: none;
+	}
+
+	.portfolio-categories .col-md-3{ 
+		max-width: none;
+
+	}
+	.portfolio-categories .category-thumbs{
+		margin-top: 150px;
+	}
+
+	.portfolio-fixed{
+		position:fixed; 
+		.col-md-offset-6{
+			background: @gray-light;
+			padding-left: 0;
+			.page-header{
+				padding-left: (@grid-gutter-width / 2);
+			}
+		}
+	}
+
+	.breadcrumbs{
+		margin-bottom: 80px;
+	}
 
 	.logo{
 		position: fixed;
@@ -258,7 +294,7 @@ a:focus{
 		width: 100%;
 	}
 	.wrap{
-		width: 100%;
+		//width: 100%;
 		padding-left: 0;
 		padding-right: 0;
 	}
@@ -317,6 +353,10 @@ a:focus{
 
 }
 @media (min-width: @screen-md-min)  {
+	
+	.portfolio-fixed .col-md-offset-6{
+		background: transparent;
+	}
 	
 	.wrap{
 		width: @container-md;
